compile-main and compile-test invoke the [javac] plugins, keyed and forecast from one body
MainCompile and TestCompile carry the module's JavacConfig, and the two
request constructors lower it: one -Xplugin:<Name> <options...> argv
element per plugin (javac's own syntax; the worker spec keeps it as one
arg), then [javac] args last. Because extraOptions is already hashed by
ActionKey.forJavac, a changed option changes the key, and the forecast
sees the same request as the build by construction. `jk explain
--verbose` names the plugins beside a compile step's outcome.

The java-compiler worker JVM now opens jdk.compiler's internals — the
set Error Prone documents for JDK 16+ — from one owner shared by the
compile fork, the pull-mode host and the AOT trainer, so a plugin that
reaches past com.sun.source loads instead of dying with an
IllegalAccessError. FormatPlans reuses the same list.

JK-2888